<resources>
    <string name="app_name">Class1</string>
    <string name="usrname">用户名: </string>
    <string name="pasword">密&#12288;码: </string>
    <string name="notice_usr">请输入用户名</string>
    <string name="notice_pswd">请输入密码</string>
    <string name="loggin">登录</string>
    <string name="cancel">取消</string>
    <string name="notice_in">登录成功!</string>
    <string name="notice_for">登录失败!</string>
</resources>
