<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:text="@string/usrname"
            />
        
        <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:hint="@string/notice_usr"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:layout_marginLeft="10dp"
            android:id="@+id/usr_input" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:text="@string/pasword" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="42dp"
            android:hint="@string/notice_pswd"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:layout_marginLeft="10dp"
            android:id="@+id/pswd_input" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/loggin"
            android:id="@+id/btn_loggin" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel"
            android:id="@+id/btn_cancel" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:id="@+id/result" />

</androidx.appcompat.widget.LinearLayoutCompat>

